# pycoro

./: .gitignore  app.py  main.py  pyproject.toml
.github/workflows/: ci.yml
scripts/: release.py
src/pycoro/: __init__.py  aio.py  bus.py  pycoro.py  scheduler.py  system.py  typing.py  util.py
src/pycoro/aio/: __init__.py  dst.py  subsystem.py
src/pycoro/aio/subsystems/: echo.py  function.py
src/pycoro/aio/subsystems/store/: __init__.py  sqlite.py
src/pycoro/api/: __init__.py  subsystem.py
src/pycoro/app/subsystems/aio/: echo.py  function.py
src/pycoro/internal/: util.py
src/pycoro/internal/aio/: __init__.py  dst.py  subsystem.py
src/pycoro/internal/api/: __init__.py
src/pycoro/internal/kernel/: bus.py
src/pycoro/internal/kernel/t_aio/: __init__.py  echo.py  store.py
src/pycoro/internal/kernel/t_api/: error.py  response.py  status.py
src/pycoro/io/: __init__.py  fio.py  function.py
src/pycoro/io/subsystems/: echo.py
src/pycoro/io/subsystems/store/: sqlite.py
src/pycoro/kernel/: bus.py  system.py
src/pycoro/kernel/t_aio/: __init__.py  echo.py  function.py  store.py
src/pycoro/kernel/t_api/: __init__.py  error.py  request.py  response.py
src/pycoro/subsystems/: echo.py  function.py
src/pycoro/subsystems/store/: __init__.py  sqlite.py
tests/: test_aio.py  test_aio_system.py  test_dst.py  test_fuzz.py  test_scheduler.py  test_something.py  test_system.py  test_system_aio.py  test_system_io.py
tests/app/subsystems/aio/: test_echo.py  test_function.py
tests/io/: test_fio.py  test_function.py
(+3 files in other folders)
