[project]
name = "pycoro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Tomperez98", email = "tomasperezalvarez@gmail.com" }]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.402",
    "pytest>=8.4.1",
 "ruff>=0.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
